--- a/src/main/resources/templates/cliente/index.html
+++ b/src/main/resources/templates/cliente/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spring Fundamentos - Listagem de Clientes</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
 </head>
 <body>
   <nav class="navbar navbar-light bg-light">
@@ -46,7 +46,7 @@
                   th:href="@{/cliente/{id} (id=${cliente.id})}"
                 ></a>
               </td>
-              <td th:text="${cliente.dateBirth}"></td>
+              <td th:text="${#temporals.format(cliente.dateBirth, 'dd/MM/yyyy')}"></td>
               <td th:text="${cliente.profession}"></td>
               <td class="text-end">
                 <a
@@ -66,6 +66,6 @@
     </div>
   </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script th:src="@{/js/bootstrap.min.js}"></script>
 </body>
 </html>
