--- a/src/main/resources/templates/cliente/index.html
+++ b/src/main/resources/templates/cliente/index.html
@@ -27,7 +27,11 @@
 
     <div class="row mt-5">
       <div class="col-sm-12">
-        <table class="table">
+
+        <h5 th:if="${#lists.isEmpty(clientes)}">Não há clientes cadastrados no momento!</h5>
+
+        <!-- <table class="table" th:if="${! #lists.isEmpty(clientes)}"> -->
+        <table class="table" th:unless="${#lists.isEmpty(clientes)}">
           <thead>
             <tr>
               <th scope="col">#</th>
