--- a/src/main/resources/templates/cliente/form.html
+++ b/src/main/resources/templates/cliente/form.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spring Fundamentos - Editar Cliente</title>
+  <title th:text="${cliente.id == null ? 'Spring Fundamentos - Cadastrar Cliente' : 'Spring Fundamentos - Editar Cliente'}"></title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
 </head>
 <body>
   <nav class="navbar navbar-light bg-light">
@@ -19,7 +19,13 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="d-flex justify-content-between align-items-center">
-          <h1>Editar Cliente</h1>
+          <h1
+            th:text="${
+              cliente.id != null 
+              ? 'Editar Cliente'
+              : 'Cadastrar Cliente'
+            }"
+          ></h1>
           <a th:href="@{/cliente}" class="btn btn-primary">Voltar</a>
         </div>
       </div>
@@ -44,7 +50,11 @@
             <input type="text" class="form-control" id="profession" th:field="*{profession}">
           </div>
           <div>
-            <button type="submit" class="btn btn-primary">Atualizar</button>
+            <button
+              type="submit"
+              class="btn btn-primary"
+              th:text="${cliente.id == null ? 'Cadastrar' : 'Atualizar'}"
+            ></button>
           </div>
         </form>
 
@@ -52,6 +62,6 @@
     </div>
   </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script th:src="@{/js/bootstrap.min.js}"></script>
 </body>
 </html>
