--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,11 +9,9 @@
   <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
 </head>
 <body>
-  <nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">ClientsApp</a>
-    </div>
-  </nav>
+  <!-- <div th:insert="~{fragments/_navbar :: nav}"></div> -->
+  <!-- <div th:include="~{fragments/_navbar :: nav}"></div> -->
+  <div th:replace="~{fragments/_navbar :: nav}"></div>
 
   <main class="container mt-4">
     <div class="row">
