--- a/src/main/resources/templates/cliente/form.html
+++ b/src/main/resources/templates/cliente/form.html
@@ -37,18 +37,24 @@
         <form method="POST" th:object="${cliente}">
           <input type="hidden" th:field="*{id}">
 
-          <div class="mb-3">
-            <label for="nome" class="form-label">Nome</label>
-            <input type="text" class="form-control" id="nome" th:field="*{nome}">
-          </div>
-          <div class="mb-3">
-            <label for="dateBirth" class="form-label">Data de Nascimento</label>
-            <input type="date" class="form-control" id="dateBirth" th:field="*{dateBirth}">
-          </div>
-          <div class="mb-3">
-            <label for="profession" class="form-label">Profissão</label>
-            <input type="text" class="form-control" id="profession" th:field="*{profession}">
-          </div>
+          <div th:replace="~{fragments/_bs-fields :: input (
+            'nome',
+            'Nome',
+            'text'
+          )}"></div>
+
+          <div th:replace="~{fragments/_bs-fields :: input (
+            'dateBirth',
+            'Data de Nascimento',
+            'date'
+          )}"></div>
+
+          <div th:replace="~{fragments/_bs-fields :: input (
+            'profession',
+            'Profissão',
+            'text'
+          )}"></div>
+
           <div>
             <button
               type="submit"
