--- a/src/main/resources/templates/cliente/show.html
+++ b/src/main/resources/templates/cliente/show.html
@@ -1,20 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html th:replace="~{layout :: layout (~{::title}, ~{::main})}">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spring Fundamentos - Detalhes do Clientes</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-  <nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">ClientsApp</a>
-    </div>
-  </nav>
-
   <main class="container mt-4">
     <div class="row">
       <div class="col-sm-12">
@@ -35,15 +24,20 @@
             <p>Data de Nascimento: <span th:text="${cliente.dateBirth}"></span></p>
           </div>
           <div class="card-footer text-end">
-            <a href="" class="btn btn-warning">Editar</a>
-            <a href="" class="btn btn-danger">Excluir</a>
+            <a
+              th:href="@{/cliente/{id}/editar (id=${cliente.id})}"
+              class="btn btn-warning"
+            >Editar</a>
+            <a
+              th:href="@{/cliente/{id}/excluir (id=${cliente.id})}"
+              class="btn btn-danger"
+              onclick="return confirm('Tem certeza que deseja excluir o cliente?')"
+            >Excluir</a>
           </div>
         </div>
 
       </div>
     </div>
   </main>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
