--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html th:replace="~{layout :: layout (~{::title}, ~{::main})}">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spring Fundamentos</title>
-
-  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
 </head>
 <body>
-  <!-- <div th:insert="~{fragments/_navbar :: nav}"></div> -->
-  <!-- <div th:include="~{fragments/_navbar :: nav}"></div> -->
-  <div th:replace="~{fragments/_navbar :: nav}"></div>
-
   <main class="container mt-4">
     <div class="row">
       <div class="col-sm-12">
@@ -34,7 +25,5 @@
       </div>
     </div>
   </main>
-
-  <script th:src="@{/js/bootstrap.min.js}"></script>
 </body>
 </html>
